# KeyOS-Releases

./: .gitignore  Justfile  README.md
0.9.1/: release-config.toml
0.9.1/apps/gui-app-authenticator/: app.elf
0.9.1/apps/gui-app-file-browser/: app.elf
0.9.1/blassets/: fw_error_qr.raw  pubkey_error_qr.raw  tamper_error_qr.raw
1.0.0/: apps.gui-app-authenticator.elf  apps.gui-app-haptics-playground.elf  apps.gui-app-led-control.elf  apps.gui-app-security-keys.elf  release-config.toml
1.0.0/blassets/: custom_fw_qr.raw  rec_error_qr.raw  sys_error_qr.raw
1.0.1/: release-config.toml
1.0.2/: release-config.toml
1.2.0/: release-config.toml
scripts/: sign.sh
tools/image-builder/: Cargo.toml  README.md
tools/image-builder/src/: main.rs
tools/release-gen/: Cargo.toml  README.md
tools/release-gen/src/: main.rs  release_manifest.rs
tools/release-gen/src/test/: mod.rs
tools/release-gen/src/test/fixtures/base/dir1/subdir1/: file1.txt
tools/release-gen/src/test/fixtures/new/dir1/subdir2/: unchanged.txt
tools/release-gen/src/test/fixtures/new/dir3/: file2.txt
tools/signer/: Cargo.toml
tools/signer/src/: main.rs
v1.0.0/: release-config.toml
v1.0.2/: release-config.toml
v1.0.2/apps/: gui-app-authenticator.elf  gui-app-bitcoin.elf  gui-app-file-browser.elf  gui-app-file-picker-test.elf  gui-app-haptics-playground.elf  gui-app-image-viewer.elf  gui-app-led-control.elf  gui-app-security-keys.elf  gui-app-seed-vault.elf  gui-app-system-actions.elf
v1.1.0/: release-config.toml
{new_version}/: release-config.toml
(+39 files in other folders)
