[package]
name = "image-builder"
version = "0.1.0"
edition = "2021"
description = "KeyOS disk image builder"
authors = ["Foundation Devices"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
fatfs = "0.3"
fscommon = "0.1"
mbrs = "0.3"
colored = "2.0"
env_logger = "0.10"
