[package]
name = "signer"
version = "0.1.0"
edition = "2021"
description = "KeyOS firmware signing tool"
authors = ["Foundation Devices"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
regex = "1.10"
colored = "2.0"
